*visidata-1.5.2 (19 May 2020)

  19 May 2020;  <chymera@gentoo.org> +metadata.xml, +visidata-1.5.2.ebuild:
  app-office/visidata: new package ahead of Gentoo Main  Ahead of Gentoo Main
  Thanks to https://github.com/SpiderX