@@ -1,3 +1,6 @@
+  20 May 2020;  <chymera@gentoo.org> visidata-1.5.2.ebuild:
+  app-office/visidata: updated deps and tests
+
 *visidata-1.5.2 (19 May 2020)
 
   19 May 2020;  <chymera@gentoo.org> +metadata.xml, +visidata-1.5.2.ebuild:
